--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -18,7 +18,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>Welcome TO ProShop</title>
+    <title>Welcome To ProShop</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
